# rangkaian-generator

./: .gitignore  DOCS.md  LICENSE  NOTES.md  README.md  build.py  setup_frontend.sh
backend/: app.spec  main.py  pyproject.toml
backend/app/: main.py
backend/app/api/: __init__.py  questions.py  schemas.py
backend/app/models/: __init__.py  circuit_spec.py  components.py
backend/app/patterns/: __init__.py  base.py  mixed_basic_pattern.py  multi_emf_pattern.py  multi_level_pattern.py  parallel_pattern.py  registry.py  series_pattern.py  value_generator.py  wheatstone_pattern.py
backend/app/services/: __init__.py  calculator.py  describer.py  renderer.py  unit_converter.py
backend/tests/: test_api.py  test_calculator.py  test_circuit_spec.py  test_mixed_basic.py  test_new_patterns.py  test_renderer.py
frontend/: index.html  package-lock.json
frontend/src/: App.jsx  index.css
frontend/src/api/: questions.js
frontend/src/components/: AnswerForm.jsx  CircuitDiagram.jsx  Controls.jsx  ErrorBanner.jsx
frontend/src/hooks/: useQuestion.js
