[project]
name = "generator-rangkaian-backend"
version = "0.1.0"
description = "Generator soal fisika rangkaian listrik SMA — backend FastAPI"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "schemdraw>=0.19",
    "matplotlib>=3.11.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
    "pyinstaller>=6.21.0",
]
